<resources>
    <string name="app_name">Street Movement App</string>
    <string name="label_main">Street Movement App</string>


    <string name="google_geo_api_key">AIzaSyBANBTlbpdpXpvDd9GQZuFkw2Pvgk1vno0</string>



    <string name="startScreen">Welcome to the new Street Movement mobile app!</string>
    <string name="pleaseLoginToContinue">Please login to continue.</string>
    <string name ="signin">Sign in</string>
    <string name ="signup">Sign up</string>

    <string name="loginScreen">Welcome to the new StreetMovement mobile app!</string>
    <string name="log_out">Log out</string>

    <string name="user_name">User Profile</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--MENU-HEADER IMG + TITLE-->
    <string name="menu_header_image">Logo</string>

    <string name="menu_header_subtitle">User Profile</string>


    <!--MENU-1st Category + 1st Category Item names-->
    <string name="menu_cat1_item1">Home</string>
    <string name="menu_cat1_item2">Training</string>
    <string name="menu_cat1_item3">Shop</string>
    <string name="menu_cat1_item4">Contact</string>

    <!--MENU-2nd Category + 2nd Category Item names-->
    <string name="menu_category2">Follow us on social media</string>
    <string name="menu_cat2_item1">Facebook</string>
    <string name="menu_cat2_item2">Instagram</string>
    <string name="menu_cat2_item3">YouTube</string>


    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>
    <string name="login_successful">Login Successful. Access token: %1$s</string>
    <string name="login_cancelled">Login-Operation cancelled.</string>
    <string name="login_error">Error: %1$s</string>


    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>


    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>

    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebookAppName">Facebook SignIn</string>
    <string name="facebook_title_text">Facebook Login</string>
    <string name="facebook_application_id" translatable="false"> 150098065766237 </string>
    <string name="fb_login_protocol_scheme"> fb150098065766237 </string>


    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>


    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>



    <!--Geofencing-->
    <!-- Buttons strings -->
    <string name="add_geofences">Add geofences</string>
    <string name="remove_geofences">Remove geofences</string>

    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>

    <!-- Error strings -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">There is a training location nearby.</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_enter_transition_notification_text">
        Want to check it out?
    </string>
    <string name="geofence_exit_transition_notification_text">
        Want to check it out?
    </string>

    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <!--Geofencing End-->

    <!--Location updates-->
    <string name="location_text">"Latitude: %1$.4f, Longitude: %2$.4f, Timestamp: %3$tr"</string>
    <string name="position_update">"%3$tr"</string>
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="last_update_time_label">Last location update time</string>
    <string name="unknown_location">Unknown location</string>
    <string name="location_updated">Location Updated: %1$s</string>
    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location unknown</string>
    <string name="location_updates_label">Location Updates</string>
    <string name="ok">OK</string>
    <string name="request_location_updates">Request location updates</string>
    <string name="remove_location_updates">Remove location updates</string>


    <plurals name="num_locations_reported">
        <item quantity="zero">No location reported</item>
        <item quantity="one">One location reported</item>
        <item quantity="other">%d locations reported</item>
    </plurals>

    <string name="start_updates">Start updates</string>
    <string name="stop_updates">Stop updates</string>

    <string name="location_settings_inadequate_warning">The location settings on the device are not
        adequate to run this sample. Fix in Settings.</string>

    <!--<string name="permission_rationale">Location permission is needed for core functionality</string>-->
    <!--<string name="permission_denied_explanation">Permission was denied, but is needed for core-->
        <!--functionality.</string>-->
    <string name="settings">Settings</string>
</resources>