<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/soro_with_logo_biger"
    android:orientation="vertical">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="backgroundImg"
        android:scaleType="centerCrop"
        android:src="@drawable/soro_with_logo_biger" />



        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:isScrollContainer="false"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">
                </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <!--<ImageView-->
                <!--android:id="@+id/backgroundView"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="150dp"-->
                <!--android:layout_marginRight="8dp"-->
                <!--android:layout_marginLeft="8dp"-->
                <!--android:adjustViewBounds="true"-->
                <!--android:contentDescription="@string/menu_header_image"-->
                <!--android:src="@drawable/streetmovement_text"-->
                <!--app:srcCompat="@drawable/streetmovement_text" />-->


                <LinearLayout
                    android:id="@+id/signinProcess"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:background="#CCffffff"
                    android:orientation="vertical"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp">

                    <LinearLayout
                        android:id="@+id/email_password_fields"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/field_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:hint="@string/hint_name"
                            android:inputType="textPersonName"
                            android:visibility="gone" />

                        <EditText
                            android:id="@+id/field_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:hint="@string/hint_email"
                            android:inputType="textEmailAddress" />

                        <EditText
                            android:id="@+id/field_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:hint="@string/hint_password"
                            android:inputType="textPassword" />

                        <Button
                            android:id="@+id/forgot_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:background="@color/transparent"
                            android:gravity="end"
                            android:paddingTop="10dp"
                            android:text="Forgot password?"
                            android:textSize="10sp"
                            android:textStyle="italic"
                            android:visibility="visible" />


                        <EditText
                            android:id="@+id/field_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_name"
                            android:inputType="textPersonName"
                            android:visibility="gone" />


                        <LinearLayout
                            android:id="@+id/email_password_buttons"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/email_password_fields"
                            android:orientation="vertical">

                            <Button
                                android:id="@+id/email_sign_in_button"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/sign_in"
                                android:theme="@style/ThemeOverlay.MyDarkButton"
                                android:visibility="visible" />

                            <Button
                                android:id="@+id/email_create_account_button"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:text="@string/create_account"
                                android:theme="@style/ThemeOverlay.MyDarkButton"
                                android:visibility="gone" />


                        </LinearLayout>


                        <!--<LinearLayout-->
                        <!--android:id="@+id/signed_in_buttons"-->
                        <!--android:layout_width="fill_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:orientation="horizontal"-->
                        <!--android:paddingLeft="16dp"-->
                        <!--android:paddingRight="16dp"-->
                        <!--android:visibility="gone"-->
                        <!--android:weightSum="2.0">-->
                        <!--<Button-->
                        <!--android:id="@+id/verify_email_button"-->
                        <!--android:layout_width="0dp"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_weight="1.0"-->
                        <!--android:text="@string/verify_email"-->
                        <!--android:theme="@style/ThemeOverlay.MyDarkButton" />-->

                        <!--</LinearLayout>-->

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:paddingLeft="4dp"
                            android:paddingRight="4dp">

                            <com.facebook.login.widget.LoginButton
                                android:id="@+id/button_facebook_login"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_alignParentRight="true"
                                android:layout_alignParentStart="true"
                                android:layout_centerVertical="true"
                                android:backgroundTint="@color/com_facebook_blue"
                                android:paddingBottom="17dp"
                                android:paddingLeft="35dp"
                                android:paddingRight="35dp"
                                android:paddingTop="17dp" />


                        </RelativeLayout>


                        <Button
                            android:id="@+id/sign_in_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:background="@drawable/btn_google_signin_light_normal_mdpi"
                            android:text="@string/common_signin_button_text_long" />

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="45dp"
                    android:orientation="vertical">


                    <Button
                        android:id="@+id/email_go_to_create_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:text="No account yet? Create one"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:textStyle="italic"
                        android:visibility="visible" />

                    <Button
                        android:id="@+id/email_go_to_sign_in"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:text="Already go an account? Sign in"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:textStyle="italic"
                        android:visibility="gone" />
                </LinearLayout>

            </LinearLayout>
            </LinearLayout>

        </ScrollView>

</FrameLayout>


